# HCG-KG

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/profiles/: base.yaml  hpc-large.yaml  hpc-llm.yaml  hpc-networkx.yaml  local-dev.yaml  local-medium.yaml
configs/schema/: kg_schema.yaml
data/raw/: Methodology Practice Guidelines_aggregated.json  al-khatib-et-al-2018-2017-aha-acc-hrs-guideline-for-management-of-patients-with-ventricular-arrhythmias-and-the_aggregated.json  amsterdam-et-al-2014-2014-aha-acc-guideline-for-the-management-of-patients-with-non-st-elevation-acute-coronary_aggregated.json  anderson-et-al-2013-management-of-patients-with-peripheral-artery-disease-%28compilation-of-2005-and-2011-accf-aha_aggregated.json  anderson-et-al-2014-acc-aha-statement-on-cost-value-methodology-in-clinical-practice-guidelines-and-performance-measures_aggregated.json  arnett-et-al-2014-aha-acc-hhs-strategies-to-enhance-application-of-clinical-practice-guidelines-in-patients-with_aggregated.json  arnett-et-al-2019-2019-acc-aha-guideline-on-the-primary-prevention-of-cardiovascular-disease_aggregated.json  brott-et-al-2011-2011-asa-accf-aha-aann-aans-acr-asnr-cns-saip-scai-sir-snis-svm-svs-guideline-on-the-management-of_aggregated.json  chan-et-al-2017-acc-aha-special-report-clinical-practice-guideline-implementation-strategies-a-summary-of-systematic_aggregated.json  goff-et-al-2013-2013-acc-aha-guideline-on-the-assessment-of-cardiovascular-risk_aggregated.json  (+27 more)
docker/: Dockerfile  docker-compose.neo4j.yml
docs/: architecture.md  hpc.md  query_contract.md  schema.md
examples/: example_cli.sh
scripts/: bootstrap_local.sh  run_demo.sh
slurm/: build_embeddings.slurm  build_graph.slurm  normalize.slurm  run_pipeline_llm.slurm
tests/: conftest.py  test_cli.py  test_config_loader.py  test_extractor.py  test_extractor_factory.py  test_normalizer.py  test_pipeline_and_query.py
(+33 files in other folders)
